--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,53 @@
-<nav class="flex">
-    <img src="https://xidoorutas.com/Assets/Dise%C3%B1o%20sin%20t%C3%ADtulo.png" alt="" class="w-10">
-    <ul class="flex">
-        <li>1</li>
-        <li>1</li>
-        <li>1</li>
-        <li>1</li>
+<nav class="flex items-center justify-evenly p-3 border-b-2 border-[#292828]">
+  <a href="/">
+    <img
+      src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694183121/favicon_ovcpr8.png"
+      alt="Xidoo Rutas"
+      class="w-10"
+    />
+  </a>
+
+  <div class="hidden md:flex gap-20">
+    <ul>
+      <a
+        href="#_"
+        class="relative inline-flex items-center justify-center px-5 py-3 overflow-hidden font-mono font-medium tracking-tighter text-white rounded-lg group hover:text-[#181717] hover:font-bold"
+      >
+        <span
+          class="absolute w-0 h-0 transition-all duration-500 ease-out bg-[#ffde59] group-hover:w-56 group-hover:h-56"
+        ></span>
+        <span class="relative"> Trayectoría</span>
+      </a>
     </ul>
+
+    <ul>
+      <a
+        href="#_"
+        class="relative inline-flex items-center justify-center px-5 py-3 overflow-hidden font-mono font-medium tracking-tighter text-white rounded-lg group hover:text-[#181717] hover:font-bold"
+      >
+        <span
+          class="absolute w-0 h-0 transition-all duration-500 ease-out bg-[#ffde59] group-hover:w-56 group-hover:h-56"
+        ></span>
+        <span class="relative"> Donaciones</span>
+      </a>
+    </ul>
+
+    <ul class="hidden md:block">
+      <a
+        href="#_"
+        class="relative inline-flex items-center justify-center px-5 py-3 overflow-hidden font-mono font-medium tracking-tighter text-white rounded-lg group hover:text-[#181717] hover:font-bold"
+      >
+        <span
+          class="absolute w-0 h-0 transition-all duration-500 ease-out bg-[#ffde59] group-hover:w-56 group-hover:h-56"
+        ></span>
+        <span class="relative"> Iniciar sesión</span>
+      </a>
+    </ul>
+  </div>
+
+  <div class="flex gap-5 md:hidden">
+    <ul><a href="">Trayectoría</a></ul>
+    <ul><a href="">Donaciones</a></ul>
+    <ul><a href="">Iniciar sesión</a></ul>
+  </div>
 </nav>
