--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,13 +9,13 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="Xidoo Rutas informativa" content="Pagina web informativa sobre Xidoo Rutas. Visita beta.xidoorutas.com" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dnaokhykr/image/upload/v1694183121/favicon_ovcpr8.png" />
+		<meta name="Xidoo Rutas" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -25,20 +25,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	html {
-		font-family: system-ui, sans-serif;
 		background: #13151a;
-		background-size: 224px;
 		color: white;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
 	}
 </style>
