--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
+import Footer from '../components/Footer.astro';
 import Navbar from '../components/Navbar.astro';
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
-
 ---
 
 <!doctype html>
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 	<body>
 		<Navbar/>
 		<slot />
+		<Footer/>
 	</body>
 </html>
 <style is:global>
