--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,131 @@
-<div class=" bg-black">
-    <div class="max-w-2xl mx-auto text-white py-10">
-        <div class="text-center">
-            <h3 class="text-3xl mb-3"> Descarga nuestra aplicación </h3>
-            <p> Esperanod pronto en iOS :(: </p>
-            <a href="" class="flex justify-center my-10">
-                <div class="flex items-center border w-auto rounded-lg px-4 py-2 mx-2 hover:bg-slate-900">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/1200px-Google_Drive_icon_%282020%29.svg.png" class="w-7 md:w-8">
-                    <div class="text-left ml-3">
-                        <p class='text-xs text-gray-200'>Download on </p>
-                        <p class="text-sm md:text-base"> Google Drive xd </p>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="mt-28 flex flex-col md:flex-row md:justify-between items-center text-sm text-gray-400">
-            <p class="order-2 md:order-1 mt-8 md:mt-0"> &copy; <a href="https://xidoorutas.com/">Xidoo Rutas</a> </p>
-            <div class="order-1 md:order-2">
-                <a class="px-2">Sobre nosotros</a>
-                <a class="px-2 border-l">Politica de privacidad</a>
-            </div>
-        </div>
+<div class="bg-black mt-20">
+  <div class="max-w-2xl mx-auto text-white py-10">
+    <div class="text-center">
+      <h3 class="font-extrabold text-[#ffde59] -mt-2 text-3xl uppercase mb-3">
+        Descarga nuestra aplicación
+      </h3>
+      <p>Esperanod pronto en iOS :(:</p>
+      <div class="flex justify-center my-10">
+        <a
+          href="#"
+          download=""
+          class="flex items-center border w-auto rounded-lg px-4 py-2 mx-2 hover:bg-[#131006] hover:border-[#ffde59] focus:scale-95 transition-all duration-300"
+        >
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/1200px-Google_Drive_icon_%282020%29.svg.png"
+            class="w-7 md:w-8"
+          />
+          <div class="text-left ml-3">
+            <p class="text-xs text-gray-200">Download on</p>
+            <p class="text-sm md:text-base">Google Drive xd</p>
+          </div>
+        </a>
+      </div>
     </div>
+
+    <div class="flex justify-evenly">
+      <a
+        href="https://www.facebook.com/XidooRutas"
+        class="hover:bg-[#ffde59] rounded-lg hover:scale-110 p-[2px] transition-all duration-300"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon hover:stroke-black icon-tabler icon-tabler-brand-facebook"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="1"
+          stroke="#ffffff"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
+          ></path>
+        </svg>
+      </a>
+      <a
+        href="https://www.instagram.com/xidoorutas/"
+        class="hover:bg-[#ffde59] rounded-lg hover:scale-110 p-[2px] transition-all duration-300"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon hover:stroke-black icon-tabler icon-tabler-brand-instagram"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="1"
+          stroke="#ffffff"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"
+          ></path>
+          <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+          <path d="M16.5 7.5l0 .01"></path>
+        </svg>
+      </a>
+      <a
+        href="https://twitter.com/RutasXidoo"
+        class="hover:bg-[#ffde59] rounded-lg hover:scale-110 p-[2px] transition-all duration-300"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon hover:stroke-black icon-tabler icon-tabler-brand-twitter"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="1"
+          stroke="#ffffff"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z"
+          ></path>
+        </svg>
+      </a>
+      <a
+        href="https://www.buymeacoffee.com/xidoorutas"
+        class="hover:bg-[#ffde59] rounded-lg hover:scale-110 p-[2px] transition-all duration-300"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon hover:stroke-black icon-tabler icon-tabler-cup"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="1"
+          stroke="#ffffff"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M5 11h14v-3h-14z"></path>
+          <path d="M17.5 11l-1.5 10h-8l-1.5 -10"></path>
+          <path d="M6 8v-1a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v1"></path>
+          <path d="M15 5v-2"></path>
+        </svg>
+      </a>
+    </div>
+
+    <div
+      class="mt-10 flex flex-col md:flex-row md:justify-between items-center text-sm text-gray-400"
+    >
+      <p class="order-2 md:order-1 mt-8 md:mt-0">&copy; Xidoo Rutas</p>
+      <p class="order-2 md:order-1 mt-8 md:mt-0">xidoorutas@gmail.com</p>
+      <div class="order-1 md:order-2">
+        <a href="/p&p" class="px-2 ">Politica de privacidad</a>
+        <a href="/team" class="px-2 border-l">Conoce al equipo</a>
+      </div>
+    </div>
+  </div>
 </div>
