--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Xidoo Rutas">
-  <section class="container mx-auto my-12 flex flex-col items-center lg:flex-row" transition:animate="fade">
+  <section class="container mx-auto my-12 flex flex-col items-center lg:flex-row animate-fade-down" transition:animate="fade">
     <div class="mx-2 text-start md:mr-32">
       <span class="text-[1rem]"> #conectandolaciudad</span>
       <h1 class="font-extrabold text-[#ffde59] -mt-2 text-5xl uppercase">
@@ -108,7 +108,7 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </section>
 
-  <div class="w-full bg-black">
+  <div class="w-full bg-black animate-fade-up">
     <div class="mt-10 mx-[10%]">
       <div class="flex items-center">
         <div class="">
