--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-evenly p-3 border-b-2 border-[#292828] fixed top-0 left-0 right-0 z-50 bg-[#13151a]">
+<nav class="flex items-center justify-evenly p-3 border-b-2 border-[#272727] fixed top-0 left-0 right-0 z-50 bg-[#000000e5]">
   <a href="/">
     <img
       src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694183121/favicon_ovcpr8.png"
