--- a/src/pages/donations.astro
+++ b/src/pages/donations.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Donaciones">
+<Layout title="Donativos">
   <div
     class="container mx-auto"
     transition:animate="fade"
