--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,14 @@
-<div class="bg-black mt-20">
-  <div class="max-w-2xl mx-auto text-white py-10">
+<div class="bg-black mt-20 border-t-2 border-[#272727]">
+  <div class="max-w-2xl mx-auto mt-5 text-white py-1">
     <div class="text-center">
-      <h3 class="font-extrabold text-[#ffde59] -mt-2 text-3xl uppercase mb-3">
+      <h3 class="font-extrabold text-[#ffde59] text-3xl uppercase mb-3">
         Descarga nuestra aplicación
       </h3>
-      <p>Esperanod pronto en iOS :(:</p>
-      <div class="flex justify-center my-10">
+      <p>Esperanos pronto en iOS :(:</p>
+      <div class="flex flex-col md:flex-row items-center gap-2 md:gap-0 justify-center my-3">
         <a
-          href="#"
-          download=""
+          href="https://drive.google.com/file/d/1V7psWvl6azb9xEDTZHMXLRA-P9AylyIA/view"
+          target="_blank"
           class="flex items-center border w-auto rounded-lg px-4 py-2 mx-2 hover:bg-[#131006] hover:border-[#ffde59] focus:scale-95 transition-all duration-300"
         >
           <img
@@ -16,14 +16,14 @@
             class="w-7 md:w-8"
           />
           <div class="text-left ml-3">
-            <p class="text-xs text-gray-200">Download on</p>
+            <p class="text-xs text-gray-200">Descarga en</p>
             <p class="text-sm md:text-base">Google Drive xd</p>
           </div>
         </a>
       </div>
     </div>
 
-    <div class="flex justify-evenly">
+    <div class="flex justify-evenly mb-2">
       <a
         href="https://www.facebook.com/XidooRutas"
         class="hover:bg-[#ffde59] rounded-lg hover:scale-110 p-[2px] transition-all duration-300"
@@ -118,7 +118,7 @@
     </div>
 
     <div
-      class="mt-10 flex flex-col md:flex-row md:justify-between items-center text-sm text-gray-400"
+      class="flex flex-col md:flex-row md:justify-between items-center text-sm text-gray-400"
     >
       <p class="order-2 md:order-1 mt-8 md:mt-0">&copy; Xidoo Rutas</p>
       <p class="order-2 md:order-1 mt-8 md:mt-0">xidoorutas@gmail.com</p>
