--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   html {
-    background: #13151a;
+    background: #000000;
     color: white;
   }
   * {
