--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Xidoo Rutas">
+<Layout title="XIDOO RUTAS">
   <section class="container mx-auto my-12 flex flex-col items-center lg:flex-row animate-fade-down" transition:animate="fade">
     <div class="mx-2 text-start md:mr-32">
       <span class="text-[1rem]"> #conectandolaciudad</span>
