--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="XIDOO RUTAS">
-  <section class="container mx-auto my-12 flex flex-col items-center lg:flex-row animate-fade-down" transition:animate="fade">
+  <section class="container mx-auto my-12 flex flex-col items-center lg:flex-row animate-fade-down">
     <div class="mx-2 text-start md:mr-32">
       <span class="text-[1rem]"> #conectandolaciudad</span>
       <h1 class="font-extrabold text-[#ffde59] -mt-2 text-5xl uppercase">
@@ -104,6 +104,7 @@ import Layout from "../layouts/Layout.astro";
         src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694190021/p1_hl4r0s.png"
         alt=""
         class="rounded-lg"
+        transition:name="imgxr"
       />
     </div>
   </section>
