--- a/src/pages/team2.astro
+++ b/src/pages/team2.astro
@@ -17,26 +17,25 @@ import Devs from "../components/Devs.astro";
         ))
       }
     </sectoin> -->
-
-    <Devs />
+    <Devs/>
 
     <div class="grid justify-center">
       <h1 class="font-extrabold text-[#ffde59] text-xl text-center">
-        Kevin Oswaldo Velazquez Medina
+        Jacqueline Castillo Ceja
       </h1>
       <div class="flex justify-center gap-2">
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          CEO
+          Database Admin
         </p>
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          Backend Developer
+          UI Design
         </p>
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          Project Manager
+          Server Manager
         </p>
       </div>
       <div class="flex justify-center gap-2 my-2">
-        <a href="https://www.instagram.com/_kevinight.ssh_/">
+        <a href="https://www.instagram.com/jacquicastillouwu/">
           <svg
             width="24"
             height="24"
@@ -55,7 +54,7 @@ import Devs from "../components/Devs.astro";
             <path d="M16.5 7.5l0 .01"></path>
           </svg>
         </a>
-        <a href="https://github.com/krvinc0de">
+        <a href="https://github.com/JacquelineCastill">
           <svg
             width="24"
             height="24"
@@ -72,7 +71,7 @@ import Devs from "../components/Devs.astro";
             ></path>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/kevinovm/">
+        <!-- <a href="">
           <svg
             width="24"
             height="24"
@@ -92,11 +91,11 @@ import Devs from "../components/Devs.astro";
             <path d="M12 16l0 -5"></path>
             <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
           </svg>
-        </a>
+        </a> -->
       </div>
       <div class="flex justify-center">
         <img
-          src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694829688/xr/kevin_naupyc.jpg"
+          src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694829689/xr/jacqueline_h9ucrn.jpg"
           alt=""
           class="rounded-xl w-[80%]"
           transition:animate="slide"
