--- a/src/pages/team3.astro
+++ b/src/pages/team3.astro
@@ -17,26 +17,24 @@ import Devs from "../components/Devs.astro";
         ))
       }
     </sectoin> -->
-
-    <Devs />
-
+    <Devs/>
     <div class="grid justify-center">
       <h1 class="font-extrabold text-[#ffde59] text-xl text-center">
-        Kevin Oswaldo Velazquez Medina
+        Asur García Salazar
       </h1>
       <div class="flex justify-center gap-2">
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          CEO
+          UI Design
         </p>
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          Backend Developer
+          Front end developer
         </p>
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          Project Manager
+          QA
         </p>
       </div>
       <div class="flex justify-center gap-2 my-2">
-        <a href="https://www.instagram.com/_kevinight.ssh_/">
+        <a href="https://www.instagram.com/dx_asur_xd/">
           <svg
             width="24"
             height="24"
@@ -55,7 +53,7 @@ import Devs from "../components/Devs.astro";
             <path d="M16.5 7.5l0 .01"></path>
           </svg>
         </a>
-        <a href="https://github.com/krvinc0de">
+        <a href="https://github.com/dxASURxd">
           <svg
             width="24"
             height="24"
@@ -72,7 +70,7 @@ import Devs from "../components/Devs.astro";
             ></path>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/kevinovm/">
+        <a href="https://www.linkedin.com/in/asur-garc%C3%ADa-salazar-377323290/">
           <svg
             width="24"
             height="24"
@@ -96,7 +94,7 @@ import Devs from "../components/Devs.astro";
       </div>
       <div class="flex justify-center">
         <img
-          src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694829688/xr/kevin_naupyc.jpg"
+          src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694832339/xr/asur_dmgqsc.jpg"
           alt=""
           class="rounded-xl w-[80%]"
           transition:animate="slide"
