--- a/src/pages/team4.astro
+++ b/src/pages/team4.astro
@@ -17,26 +17,21 @@ import Devs from "../components/Devs.astro";
         ))
       }
     </sectoin> -->
-
-    <Devs />
-
+    <Devs/>
     <div class="grid justify-center">
       <h1 class="font-extrabold text-[#ffde59] text-xl text-center">
-        Kevin Oswaldo Velazquez Medina
+        Brandon Antonio García Chavez
       </h1>
       <div class="flex justify-center gap-2">
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          CEO
+          Server Admin
         </p>
         <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          Backend Developer
-        </p>
-        <p class="text-[10px] bg-[#E8BD38] text-[#3b300e] p-[2px] rounded-lg">
-          Project Manager
+          Front end developer
         </p>
       </div>
       <div class="flex justify-center gap-2 my-2">
-        <a href="https://www.instagram.com/_kevinight.ssh_/">
+        <a href="https://www.instagram.com/brandon_antonio_bagch_/">
           <svg
             width="24"
             height="24"
@@ -55,7 +50,7 @@ import Devs from "../components/Devs.astro";
             <path d="M16.5 7.5l0 .01"></path>
           </svg>
         </a>
-        <a href="https://github.com/krvinc0de">
+        <a href="https://github.com/BAGCH2001">
           <svg
             width="24"
             height="24"
@@ -72,31 +67,10 @@ import Devs from "../components/Devs.astro";
             ></path>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/kevinovm/">
-          <svg
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path
-              d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
-            ></path>
-            <path d="M8 11l0 5"></path>
-            <path d="M8 8l0 .01"></path>
-            <path d="M12 16l0 -5"></path>
-            <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
-          </svg>
-        </a>
       </div>
       <div class="flex justify-center">
         <img
-          src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694829688/xr/kevin_naupyc.jpg"
+          src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694829689/xr/brandon_fkho0k.jpg"
           alt=""
           class="rounded-xl w-[80%]"
           transition:animate="slide"
