--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,6 @@
-<nav class="flex items-center justify-evenly p-3 border-b-2 border-[#272727] fixed top-0 left-0 right-0 z-50 bg-[#000000e5]">
+<nav
+  class="flex items-center md:justify-center justify-between p-3 border-b-2 border-[#272727] fixed top-0 left-0 right-0 z-50 bg-[#000000e5]"
+>
   <a href="/">
     <img
       src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694183121/favicon_ovcpr8.png"
@@ -8,6 +10,15 @@
   </a>
 
   <div class="hidden md:flex gap-20">
+    <ul>
+      <a
+        href="/"
+        class="relative inline-flex items-center justify-center px-5 py-3 overflow-hidden font-mono font-medium tracking-tighter text-white rounded-lg group hover:font-bold"
+      >
+        <span class="relative"> Inicio</span>
+      </a>
+    </ul>
+
     <ul>
       <a
         href="/trajectory1"
@@ -32,18 +43,6 @@
       </a>
     </ul>
 
-    <ul>
-      <a
-        href="/team"
-        class="relative inline-flex items-center justify-center px-5 py-3 overflow-hidden font-mono font-medium tracking-tighter text-white rounded-lg group hover:text-[#181717] hover:font-bold"
-      >
-        <span
-          class="absolute w-0 h-0 transition-all duration-500 ease-out bg-[#ffde59] group-hover:w-56 group-hover:h-56"
-        ></span>
-        <span class="relative"> Equipo</span>
-      </a>
-    </ul>
-
     <ul class="hidden md:block">
       <a
         href="https://beta.xidoorutas.com/"
@@ -61,6 +60,8 @@
   <div class="flex gap-5 md:hidden text-sm">
     <ul><a href="/trajectory1">Trayectoría</a></ul>
     <ul><a href="/donations">Donaciones</a></ul>
-    <ul><a href="https://beta.xidoorutas.com/" target="_blank">Plataforma XR</a></ul>
+    <ul>
+      <a href="https://beta.xidoorutas.com/" target="_blank">Plataforma XR</a>
+    </ul>
   </div>
 </nav>
