--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
-import {ViewTransitions} from 'astro:transitions';
+import { ViewTransitions, fade } from "astro:transitions";
 interface Props {
   title: string;
 }
@@ -33,9 +33,11 @@ const { title } = Astro.props;
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="md:[margin-top:100px]">
+  <body transition:animate={fade({ duration: "0.4s" })}>
     <Navbar />
-    <slot />
+    <div class="mt-20">
+      <slot />
+    </div>
     <Footer />
   </body>
 </html>
