--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="404 Ruta no encontrada">
-  <div class="md:flex items-end justify-between mx-[10%] mt-20 md:mt-0 " transition:animate="fade">
+  <div class="md:flex items-end justify-between mx-[10%] mt-20 md:mt-0 ">
     <div class="md:relative">
       <div class=" md:absolute text-center">
         <h1 class="font-extrabold text-[#ffde59] text-3xl uppercase">
