--- a/src/pages/donations.astro
+++ b/src/pages/donations.astro
@@ -3,14 +3,18 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Donativos">
-  <div
-    class="container mx-auto"
-    transition:animate="fade"
-  >
-    <div class="md:flex items-end ">
-      <img src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694454650/6136974_zeggan.png" alt="" class="md:w-[50%] -mt-10 rounded-xl"/>
+  <div class="container mx-auto">
+    <div class="md:flex items-end">
+      <img
+        src="https://res.cloudinary.com/dnaokhykr/image/upload/v1694454650/6136974_zeggan.png"
+        alt=""
+        class="md:w-[50%] -mt-10 rounded-xl"
+        transition:name="imgxr"
+      />
       <div class="mx-[5%]">
-        <h1 class="font-extrabold text-[#ffde59] text-2xl uppercase">Apoya a este proyecto</h1>
+        <h1 class="font-extrabold text-[#ffde59] text-2xl uppercase">
+          Apoya a este proyecto
+        </h1>
         <p>
           Con tu donación, podemos impulsar el desarrollo de nuestra aplicación
           y trabajar en optimizar las rutas, fomentar el comercio local y
@@ -19,7 +23,11 @@ import Layout from "../layouts/Layout.astro";
         </p>
         <div class="flex items-center p-6">
           <a href="https://www.buymeacoffee.com/xidoorutas" target="_blank">
-            <img src="https://xidoorutas.com/Assets/Buymecoffe.png" alt="" class="w-20" />
+            <img
+              src="https://xidoorutas.com/Assets/Buymecoffe.png"
+              alt=""
+              class="w-20"
+            />
           </a>
           <p>Regálanos un café :)</p>
         </div>
