Cambio en navbar
cambie la leyenda "Plataforma Xidoo Rutas" por "Iniciar sesion"

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -52,7 +52,7 @@
         <span
           class="absolute w-0 h-0 transition-all duration-500 ease-out bg-[#ffde59] group-hover:w-56 group-hover:h-56"
         ></span>
-        <span class="relative">Plataforma Xidoo Rutas</span>
+        <span class="relative">Inicia sesión</span>
       </a>
     </ul>
   </div>
