--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -123,8 +123,8 @@
       <p class="order-2 md:order-1 mt-8 md:mt-0">&copy; Xidoo Rutas</p>
       <p class="order-2 md:order-1 mt-8 md:mt-0">xidoorutas@gmail.com</p>
       <div class="order-1 md:order-2">
-        <a href="/p&p" class="px-2 ">Politica de privacidad</a>
-        <a href="/team" class="px-2 border-l">Conoce al equipo</a>
+        <a href="/p&p" class="px-2 hover:text-[#ffde59] ">Politica de privacidad</a>
+        <a href="/team" class="px-2 border-l hover:text-[#ffde59]">Conoce al equipo</a>
       </div>
     </div>
   </div>
